# grantry

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  ruff.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  dependabot-auto-merge.yml  publish.yml
docs/: OVERVIEW.md  demo.tape  index.html
docs/superpowers/plans/: 2026-07-15-grantry-phase1.md
docs/superpowers/specs/: 2026-07-15-grantry-design.md  2026-07-15-keygate-design.md
examples/: policy.yaml
src/grantry/: __init__.py  __main__.py  admin.py  appconfig.py  assignments_graph_template.html  audit.py  awscli_cache.py  broker.py  cli.py  completion.py  config.py  console.py  gating.py  graphdata.py  humanops.py  idcache.py  identity.py  instance.py  logging_setup.py  mcp_install.py  mcp_server.py  pick.py  policy.py  render.py  scaffold.py  secrets.py  snapshots.py  ttl.py
src/grantry/providers/: aws.py  base.py
tests/: conftest.py  test_admin.py  test_appconfig.py  test_audit.py  test_aws_provider.py  test_awscli_cache.py  test_broker.py  test_cli.py  test_completion.py  test_config.py  test_console.py  test_e2e_slice.py  test_gating.py  test_graph.py  test_humanops.py  test_identity.py  test_instance.py  test_logging_setup.py  test_mcp_install.py  test_mcp_server.py  test_pick.py  test_policy.py  test_sandbox.py  test_scaffold.py  test_secrets.py  test_smoke.py  test_snapshots.py  test_ttl.py
tests/fakes/: fake_sso.py
