[project]
name = "grantry"
version = "0.1.0"
description = "Local credential broker for humans and AI agents, AWS-first"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Sai Kiran Meda" }]
dependencies = [
    "botocore>=1.43",
    "keyring>=25.7",
    "mcp>=1.28",
    "pyyaml>=6.0.3",
]

[project.scripts]
grantry = "grantry.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.1",
    "pytest-asyncio>=1.4",
    "mypy>=2.3",
    "ruff>=0.15",
    "types-pyyaml>=6.0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src", "tests"]

# Product code is fully strict. Test bodies do not need return annotations on
# every function; strict typing there costs noise without catching real bugs.
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
