[project]
name = "grantry"
version = "0.10.4"
description = "Local credential broker for humans and AI agents, AWS-first"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Sai Kiran Meda" }]
dependencies = [
    "botocore>=1.43",
    "keyring>=25.7",
    "mcp>=1.28",
    "pyyaml>=6.0.3",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
grantry = "grantry.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.1",
    "pytest-asyncio>=1.4",
    "mypy>=2.3",
    "ruff>=0.15",
    "types-pyyaml>=6.0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# src layout: map src/grantry -> grantry, and ship the bundled HTML template.
packages = ["src/grantry"]
artifacts = ["*.html"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src", "tests"]

# Product code is fully strict. Test bodies do not need return annotations on
# every function; strict typing there costs noise without catching real bugs.
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false

# botocore ships no type information (no py.typed marker).
[[tool.mypy.overrides]]
module = ["botocore.*"]
ignore_missing_imports = true

# tomli is only installed on Python < 3.11 (a conditional dependency). On 3.11+
# it is absent, so tell mypy not to error when it cannot resolve the import.
[[tool.mypy.overrides]]
module = ["tomli"]
ignore_missing_imports = true
